--- a/common-data/build.gradle
+++ b/common-data/build.gradle
@@ -37,6 +37,7 @@ repositories {
 
 
 dependencies {
+    compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile ('org.springframework.boot:spring-boot-starter-hateoas')
     runtime('com.h2database:h2')
