--- a/common-data/src/main/resources/application.properties
+++ b/common-data/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8082
 logging.level.org.springframework.web: DEBUG
 logging.level.org.hibernate: ERROR
 logging.level.com.carcosadreaming.rpg:debug
